--- a/JavaScript/Passenger_counter_app/index.html
+++ b/JavaScript/Passenger_counter_app/index.html
@@ -5,11 +5,11 @@
     <body>
         <h1>People entered:</h1>
         <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <!-- <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
-        <script src="index.js">
-            nnerText
-        </script>
+        <p id="save-el">Previous entries: </p> -->
+        <!-- Create an INCREMENT button with the id="increment-btn" -->
+        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <script src="index.js"></script>
     </body>
 </html>
