Revising HTML, CSS and JS

--- a/JavaScript/superSimpleDev/website.html
+++ b/JavaScript/superSimpleDev/website.html
@@ -18,12 +18,24 @@
     </style>
 </head>
 <body>
-    <button title="tooltip" class="red-button">
+    <button title="tooltip" class="red-button" onclick="
+        alert('Good job');">
         hello
     </button>
     
     <p>
         Paragraph <button class="yellow-button">hello</button> of text
     </p>
+
+    <script>
+        // This is a comment
+        // This code creates a pop-up
+        /*
+        Multi -line
+        comment
+        */
+       console.log(2+2);
+        // alert('hello');
+    </script>
 </body>
 </html>
