HTML and JavaScript Calculator

--- a/JavaScript/superSimpleDev/05-cart_quantity.html
+++ b/JavaScript/superSimpleDev/05-cart_quantity.html
@@ -25,6 +25,26 @@
             console.log(`Cart quantity: ${cartQuantity += 3}`)
         ">+3</button>
 
+        <button onclick="
+            console.log(`Cart quantity: ${cartQuantity += 4}`)
+        ">+4</button>
+
+        <button onclick="
+            console.log(`Cart quantity: ${cartQuantity += 5}`)
+        ">+5</button>
+
+        <button onclick="
+        console.log(`Cart quantity: ${(cartQuantity--)}`)
+        ">Remove from cart</button>
+
+        <button onclick="
+        console.log(`Cart quantity: ${cartQuantity -= 2}`)
+        ">-2</button>
+
+        <button onclick="
+        console.log(`Cart quantity: ${cartQuantity -= 3}`)
+        ">-3</button>
+
         <!-- Reset Cart Button -->
         <button onclick="
             console.log(`Cart was reset.\nCart quantity: ${cartQuantity = 0}`)
