Learning booleans in JS

--- a/JavaScript/superSimpleDev/06-booleans.html
+++ b/JavaScript/superSimpleDev/06-booleans.html
@@ -25,9 +25,12 @@
             }
 
             // Using if-else statements
-            if (17 >= 18) {
+
+            const age = 17;
+
+            if (age >= 18) {
                 console.log('You can Vote!');
-            } else if (17 >= 16) {
+            } else if (age >= 16) {
                 console.log('Almost there!');
             } else {
                 console.log('You CANNOT vote!');
