--- a/JavaScript/superSimpleDev/6a.html
+++ b/JavaScript/superSimpleDev/6a.html
@@ -16,6 +16,14 @@
         console.log(`Good night! ${name}`);
       }
 
+      let age = 6;
+
+      if (age <= 6 || age >= 65) {
+        console.log('Discount');
+      } else {
+        console.log('No discount');
+      }
+
     </script>
   </body>
 </html>
