--- a/JavaScript/superSimpleDev/6a.html
+++ b/JavaScript/superSimpleDev/6a.html
@@ -16,9 +16,10 @@
         console.log(`Good night! ${name}`);
       }
 
-      let age = 6;
+      const age = 65;
+      const isHoliday = true;
 
-      if (age <= 6 || age >= 65) {
+      if ((age <= 6 || age >= 65) && !isHoliday) {
         console.log('Discount');
       } else {
         console.log('No discount');
